--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Mi ubicación GPS</title>
   </head>
+    <h1 style="color:blue;">Geolocalización</h1>
   <body>
     <h1 id="location">Cargando ubicación...</h1>
     <script>
