--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 
     <!DOCTYPE html>
 <html>
-  <head>
+  <head> 
+      <link rel="stylesheet" href="styles.css">>
     <meta charset="UTF-8">
     <title>Mi ubicación GPS</title>
   </head>
-    <h1 style="color:blue;">Geolocalización</h1>
+    <h1 >Geolocalización</h1>
   <body>
     <h1 id="location">Cargando ubicación...</h1>
     <script>
