--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <!DOCTYPE html>
 <html>
   <head> 
-      <link rel="stylesheet" href="styles.css">>
+      <link rel="stylesheet" href="estilos.css">>
     <meta charset="UTF-8">
     <title>Mi ubicación GPS</title>
   </head>
